2011-06-07  Felician Marton  <marton.felician.zoltan@stud.u-szeged.hu>

Reviewed by Nikolas Zimmermann.

        SVG animation beginElement() does not restart the animation after endElement().
        https://bugs.webkit.org/show_bug.cgi?id=43452

        Added test for animation beginElement. It should restart the animation even if the animation is stopped by endElement() previously.

        * svg/animations/animate-endElement-beginElement-expected.txt: Added.
        * svg/animations/animate-endElement-beginElement.html: Added.
        * svg/animations/script-tests/animate-endElement-beginElement.js: Added.
2011-06-07  Felician Marton  <marton.felician.zoltan@stud.u-szeged.hu>

        Reviewed by Nikolas Zimmermann.

        SVG animation beginElement() does not restart the animation after endElement().
        https://bugs.webkit.org/show_bug.cgi?id=43452

        Test: svg/animations/animate-endElement-beginElement.html

        Calling beginElement() after calling endElement() previously does not restarted the animation when animation
        element's end attribute doesn't contains a bigger value than the current animation time.

        * svg/animation/SVGSMILElement.cpp:
        (WebCore::SVGSMILElement::findInstanceTime):

Canonical link: https://commits.webkit.org/77674@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@88234 268f45cc-cd09-0410-ab3c-d52691b4dbfc